--- a/betapp/pubspec.yaml
+++ b/betapp/pubspec.yaml
@@ -1,5 +1,5 @@
 name: betapp
-description: "A new Flutter project."
+description: "A betting app for the upcoming 2024 EM."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  firebase_core: ^2.31.0
+  firebase_auth: ^4.19.5
+  cloud_firestore: ^4.17.3
 
 dev_dependencies:
   flutter_test:
