--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,8 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^12.1.0",
-    "firebase-functions": "^5.0.0"
+    "firebase-functions": "^5.0.1",
+    "iso-639-1": "^3.1.2"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
