--- a/betapp/pubspec.yaml
+++ b/betapp/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^4.19.5
   cloud_firestore: ^4.17.3
   provider: ^6.1.2
+  firebase_storage: ^11.7.5
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
