--- a/betapp/pubspec.yaml
+++ b/betapp/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.1.2
   firebase_storage: ^11.7.5
   intl: ^0.19.0
+  share_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
