--- a/betapp/pubspec.yaml
+++ b/betapp/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_storage: ^11.7.5
   intl: ^0.19.0
   share_plus: ^9.0.0
+  flutter_launcher_icons: ^0.13.1
+  pull_down_button: ^0.9.4
 
 dev_dependencies:
   flutter_test:
