--- a/betapp/pubspec.yaml
+++ b/betapp/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   share_plus: ^9.0.0
   flutter_launcher_icons: ^0.13.1
   pull_down_button: ^0.9.4
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
