Added Timestamp to user Models Implemented Preview Query in Functions

--- a/betapp/pubspec.yaml
+++ b/betapp/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   pull_down_button: ^0.9.4
   shared_preferences: ^2.2.3
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
