--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.0.0",
-    "iso-639-1": "^3.1.2"
+    "iso-639-1": "^3.1.2",
+    "@faker-js/faker": "^8.4.1"
 
   },
   "devDependencies": {
