--- a/functions/package.json
+++ b/functions/package.json
@@ -14,11 +14,11 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "cors": "^2.8.5",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.0.0",
-    "iso-639-1": "^3.1.2",
-    "@faker-js/faker": "^8.4.1"
-
+    "iso-639-1": "^3.1.2"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
